--- a/tutorial.html
+++ b/tutorial.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>FSharpML
+    <title>Introducing your project
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="FSharp functions for streaming graph data to gephi a graph visualization tool"/>
@@ -35,20 +35,8 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1><a name="FSharpML" class="anchor" href="#FSharpML">FSharpML</a></h1>
-<p>Documentation</p>
-<div class="row">
-  <div class="span1"></div>
-  <div class="span6">
-    <div class="well well-small" id="nuget">
-      The FSharpML library can be <a href="https://nuget.org/packages/FSharpML">installed from NuGet</a>:
-      <pre>PM> Install-Package FSharpML</pre>
-    </div>
-  </div>
-  <div class="span1"></div>
-</div>
-<h2><a name="Example" class="anchor" href="#Example">Example</a></h2>
-<p>This example demonstrates using a function defined in this sample library.</p>
+<h1><a name="Introducing-your-project" class="anchor" href="#Introducing-your-project">Introducing your project</a></h1>
+<p>Say more</p>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
 <span class="l">2: </span>
 <span class="l">3: </span>
@@ -57,33 +45,12 @@
 <td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="pp">#r</span> <span class="s">&quot;FSharpML.dll&quot;</span>
 <span class="k">open</span> <span class="id">FSharpML</span>
 
-<span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="fn">printfn</span> <span class="s">&quot;hello = </span><span class="pf">%i</span><span class="s">&quot;</span> <span class="o">&lt;|</span> <span class="id">Library</span><span class="pn">.</span><span class="id">hello</span> <span class="n">0</span>
+<span class="id">Library</span><span class="pn">.</span><span class="id">hello</span> <span class="n">0</span>
 </code></pre></td>
 </tr>
 </table>
 <p>Some more info</p>
-<h2><a name="Samples-amp-documentation" class="anchor" href="#Samples-amp-documentation">Samples &amp; documentation</a></h2>
-<p>The library comes with comprehensible documentation.
-It can include tutorials automatically generated from <code>*.fsx</code> files in <a href="https://github.com/fsprojects/FSharpML/tree/master/docs/content">the content folder</a>.
-The API reference is automatically generated from Markdown comments in the library implementation.</p>
-<ul>
-<li><p><a href="tutorial.html">Tutorial</a> contains a further explanation of this sample library.</p></li>
-<li>
-<p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
-and functions in the library. This includes additional brief samples on using most of the
-functions.</p>
-</li>
-</ul>
-<h2><a name="Contributing-and-copyright" class="anchor" href="#Contributing-and-copyright">Contributing and copyright</a></h2>
-<p>The project is hosted on <a href="https://github.com/fsprojects/FSharpML">GitHub</a> where you can <a href="https://github.com/fsprojects/FSharpML/issues">report issues</a>, fork
-the project and submit pull requests. If you're adding a new public API, please also
-consider adding <a href="https://github.com/fsprojects/FSharpML/tree/master/docs/content">samples</a> that can be turned into a documentation. You might
-also want to read the <a href="https://github.com/fsprojects/FSharpML/blob/master/README.md">library design notes</a> to understand how it works.</p>
-<p>The library is available under Public Domain license, which allows modification and
-redistribution for both commercial and non-commercial purposes. For more information see the
-<a href="https://github.com/fsprojects/FSharpML/blob/master/LICENSE.txt">License file</a> in the GitHub repository.</p>
 
-<div class="tip" id="fs1">val printfn : format:Printf.TextWriterFormat&lt;&#39;T&gt; -&gt; &#39;T</div>
 
         </div>
         <div class="span3">
