Update generated documentation for version 0.0.1

--- a/data/README.html
+++ b/data/README.html
@@ -77,8 +77,12 @@ Original source: <a href="http://archive.ics.uci.edu/ml/datasets/Optical+Recogni
             <li><a href="/FSharpML/license.html">License</a></li>
             <li><a href="/FSharpML/release-notes.html">Release Notes</a></li>
             
-            <li class="nav-header">Getting started</li>
-            <li><a href="/FSharpML/tutorial.html">Sample tutorial</a></li>
+            <li class="nav-header">Samples</li>
+            <li><a href="/FSharpML/IrisClassification.html">Classification iris data</a></li>
+			<li><a href="/FSharpML/IrisClustering.html">Clustering iris data</a></li>
+			<li><a href="/FSharpML/SentimentAnalysis.html">Sentiment analysis</a></li>
+			<li><a href="/FSharpML/SpamDetection.html">Spam detection</a></li>
+			
 
             <li class="nav-header">Documentation</li>
             <li><a href="/FSharpML/reference/index.html">API Reference</a></li>
