--- a/release-notes.html
+++ b/release-notes.html
@@ -52,8 +52,12 @@
             <li><a href="/FSharpML/license.html">License</a></li>
             <li><a href="/FSharpML/release-notes.html">Release Notes</a></li>
             
-            <li class="nav-header">Getting started</li>
-            <li><a href="/FSharpML/tutorial.html">Sample tutorial</a></li>
+            <li class="nav-header">Samples</li>
+            <li><a href="/FSharpML/IrisClassification.html">Classification iris data</a></li>
+			<li><a href="/FSharpML/IrisClustering.html">Clustering iris data</a></li>
+			<li><a href="/FSharpML/SentimentAnalysis.html">Sentiment analysis</a></li>
+			<li><a href="/FSharpML/SpamDetection.html">Spam detection</a></li>
+			
 
             <li class="nav-header">Documentation</li>
             <li><a href="/FSharpML/reference/index.html">API Reference</a></li>
