--- a/data/README.html
+++ b/data/README.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>README</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="FSharp functions for streaming graph data to gephi a graph visualization tool"/>
+    <meta name="description" content="Library for the FSharp friendly usage of the ML.NET project"/>
     <meta name="author" content="Timo Mühlhaus"/>
 
     <script src="https://code.jquery.com/jquery-1.8.0.js"></script>
@@ -28,7 +28,7 @@
           <li><a href="http://fsharp.org">fsharp.org</a></li>
           <li><a href="https://github.com/CSBiology/FSharpML">github page</a></li>
         </ul>
-        <h3 class="muted"><a href="/FSharpML/index.html">FSharpGephiStreamer</a></h3>
+        <h3 class="muted"><a href="/FSharpML/index.html">FSharpML</a></h3>
       </div>
       <hr />
       <div class="row">
@@ -69,10 +69,10 @@ Original source: <a href="http://archive.ics.uci.edu/ml/datasets/Optical+Recogni
         <div class="span3">
           <img src="/FSharpML/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
-            <li class="nav-header">FSharpGephiStreamer</li>
+            <li class="nav-header">FSharpML</li>
             <li><a href="/FSharpML/index.html">Home page</a></li>
             <li class="divider"></li>
-            <li><a href="http://nuget.org/packages/FSharpGephiStreamer">Get Library via NuGet</a></li>
+            <li><a href="http://nuget.org/packages/FSharpML">Get Library via NuGet</a></li>
             <li><a href="https://github.com/CSBiology/FSharpML">Source Code on GitHub</a></li>
             <li><a href="/FSharpML/license.html">License</a></li>
             <li><a href="/FSharpML/release-notes.html">Release Notes</a></li>
