--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Sample Spam detection
+    <title>FSharpML: Explore ML.Net in F#
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Library for the FSharp friendly usage of the ML.NET project"/>
@@ -35,11 +35,29 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1><a name="Sample-Spam-detection" class="anchor" href="#Sample-Spam-detection">Sample Spam detection</a></h1>
 <h1><a name="FSharpML-Explore-ML-Net-in-F" class="anchor" href="#FSharpML-Explore-ML-Net-in-F">FSharpML: Explore ML.Net in F#</a></h1>
 <p>FSharpML is a lightweight API on top of the powerful ML.Net library written in F#. It is designed to enable users to explore ML.Net in a scriptable
 manner and maintaining the functional style of F#.</p>
 <p>After installing the package via Nuget we can load the delivered reference script and start using ML.Net in conjunction with FSharpML.</p>
+<table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
+<span class="l">2: </span>
+<span class="l">3: </span>
+<span class="l">4: </span>
+<span class="l">5: </span>
+<span class="l">6: </span>
+<span class="l">7: </span>
+</pre></td>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="pp">#I</span> <span class="s">&quot;./packages/FSharpML/lib/netstandard2.0/&quot;</span>
+<span class="pp">#load</span> <span class="s">&quot;FSharpML.fsx&quot;</span>
+
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="id">System</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs4', 4)" onmouseover="showTip(event, 'fs4', 4)" class="id">Microsoft</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs5', 5)" onmouseover="showTip(event, 'fs5', 5)" class="id">ML</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs4', 6)" onmouseover="showTip(event, 'fs4', 6)" class="id">Microsoft</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs5', 7)" onmouseover="showTip(event, 'fs5', 7)" class="id">ML</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs6', 8)" onmouseover="showTip(event, 'fs6', 8)" class="id">Data</span><span class="pn">;</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs7', 9)" onmouseover="showTip(event, 'fs7', 9)" class="id">FSharpML</span>
+</code></pre></td>
+</tr>
+</table>
+<p>Start by creating a model context (MLContext) and a data reader with the loading configuration.</p>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l"> 1: </span>
 <span class="l"> 2: </span>
 <span class="l"> 3: </span>
@@ -62,25 +80,8 @@ manner and maintaining the functional style of F#.</p>
 <span class="l">20: </span>
 <span class="l">21: </span>
 <span class="l">22: </span>
-<span class="l">23: </span>
-<span class="l">24: </span>
-<span class="l">25: </span>
-<span class="l">26: </span>
-<span class="l">27: </span>
-<span class="l">28: </span>
-<span class="l">29: </span>
-<span class="l">30: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="pp">#I</span> <span class="s">&quot;./packages/FSharpML/lib/netstandard2.0/&quot;</span>
-<span class="pp">#load</span> <span class="s">&quot;FSharpML.fsx&quot;</span>
-
-<span class="k">open</span> <span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="id">System</span>
-<span class="k">open</span> <span onmouseout="hideTip(event, 'fs4', 4)" onmouseover="showTip(event, 'fs4', 4)" class="id">Microsoft</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs5', 5)" onmouseover="showTip(event, 'fs5', 5)" class="id">ML</span>
-<span class="k">open</span> <span onmouseout="hideTip(event, 'fs4', 6)" onmouseover="showTip(event, 'fs4', 6)" class="id">Microsoft</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs5', 7)" onmouseover="showTip(event, 'fs5', 7)" class="id">ML</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs6', 8)" onmouseover="showTip(event, 'fs6', 8)" class="id">Data</span><span class="pn">;</span>
-<span class="k">open</span> <span onmouseout="hideTip(event, 'fs7', 9)" onmouseover="showTip(event, 'fs7', 9)" class="id">FSharpML</span>
-
-
-<span class="c">//Create the MLContext to share across components for deterministic results</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="c">//Create the MLContext to share across components for deterministic results</span>
 <span class="k">let</span> <span onmouseout="hideTip(event, 'fs8', 10)" onmouseover="showTip(event, 'fs8', 10)" class="id">mlContext</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs9', 11)" onmouseover="showTip(event, 'fs9', 11)" class="rt">MLContext</span><span class="pn">(</span><span class="id">seed</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs10', 12)" onmouseover="showTip(event, 'fs10', 12)" class="vt">Nullable</span> <span class="n">1</span><span class="pn">)</span>    <span class="c">//Seed set to any number so you have a deterministic environment</span>
 
 <span class="c">// STEP 1: Common data loading configuration</span>
@@ -100,30 +101,49 @@ manner and maintaining the functional style of F#.</p>
 
     
 <span class="c">//Split dataset in two parts: TrainingDataset (80%) and TestDataset (20%)</span>
-<span class="k">let</span> <span class="k">struct</span><span class="pn">(</span><span onmouseout="hideTip(event, 'fs18', 42)" onmouseover="showTip(event, 'fs18', 42)" class="id">trainingDataView</span><span class="pn">,</span> <span onmouseout="hideTip(event, 'fs19', 43)" onmouseover="showTip(event, 'fs19', 43)" class="id">testingDataView</span><span class="pn">)</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs8', 44)" onmouseover="showTip(event, 'fs8', 44)" class="fn">mlContext</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs20', 45)" onmouseover="showTip(event, 'fs20', 45)" class="id">Clustering</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs21', 46)" onmouseover="showTip(event, 'fs21', 46)" class="id">TrainTestSplit</span><span class="pn">(</span><span onmouseout="hideTip(event, 'fs11', 47)" onmouseover="showTip(event, 'fs11', 47)" class="id">fullData</span><span class="pn">,</span> <span class="id">testFraction</span> <span class="o">=</span> <span class="n">0.2</span><span class="pn">)</span>
+<span class="k">let</span> <span class="k">struct</span><span class="pn">(</span><span onmouseout="hideTip(event, 'fs18', 42)" onmouseover="showTip(event, 'fs18', 42)" class="id">trainingDataView</span><span class="pn">,</span> <span onmouseout="hideTip(event, 'fs19', 43)" onmouseover="showTip(event, 'fs19', 43)" class="id">testingDataView</span><span class="pn">)</span> <span class="o">=</span> 
+    <span onmouseout="hideTip(event, 'fs8', 44)" onmouseover="showTip(event, 'fs8', 44)" class="fn">mlContext</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs20', 45)" onmouseover="showTip(event, 'fs20', 45)" class="id">Clustering</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs21', 46)" onmouseover="showTip(event, 'fs21', 46)" class="id">TrainTestSplit</span><span class="pn">(</span><span onmouseout="hideTip(event, 'fs11', 47)" onmouseover="showTip(event, 'fs11', 47)" class="id">fullData</span><span class="pn">,</span> <span class="id">testFraction</span> <span class="o">=</span> <span class="n">0.2</span><span class="pn">)</span>
 </code></pre></td>
 </tr>
 </table>
 <p>After initializing an model context (MLContext) we can start to build our model by appending transformer functions.
 The EstimatorModel (Model) holds the context and the chain of estimators (EstimatorChain) and is than fitted to the training data
 in a training step. The resulting TransformerModel serves as a predictor.</p>
-<table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
-<span class="l">2: </span>
-<span class="l">3: </span>
-<span class="l">4: </span>
-<span class="l">5: </span>
-<span class="l">6: </span>
-<span class="l">7: </span>
-<span class="l">8: </span>
-<span class="l">9: </span>
+<table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l"> 1: </span>
+<span class="l"> 2: </span>
+<span class="l"> 3: </span>
+<span class="l"> 4: </span>
+<span class="l"> 5: </span>
+<span class="l"> 6: </span>
+<span class="l"> 7: </span>
+<span class="l"> 8: </span>
+<span class="l"> 9: </span>
+<span class="l">10: </span>
+<span class="l">11: </span>
+<span class="l">12: </span>
+<span class="l">13: </span>
+<span class="l">14: </span>
+<span class="l">15: </span>
+<span class="l">16: </span>
+<span class="l">17: </span>
+<span class="l">18: </span>
 </pre></td>
 <td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="c">//STEP 2: Process data, create and train the model </span>
 <span class="k">let</span> <span onmouseout="hideTip(event, 'fs22', 48)" onmouseover="showTip(event, 'fs22', 48)" class="id">model</span> <span class="o">=</span> 
     <span onmouseout="hideTip(event, 'fs23', 49)" onmouseover="showTip(event, 'fs23', 49)" class="m">EstimatorModel</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs24', 50)" onmouseover="showTip(event, 'fs24', 50)" class="id">create</span> <span onmouseout="hideTip(event, 'fs8', 51)" onmouseover="showTip(event, 'fs8', 51)" class="id">mlContext</span>
     <span class="c">// Process data transformations in pipeline</span>
-    <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs23', 52)" onmouseover="showTip(event, 'fs23', 52)" class="m">EstimatorModel</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs25', 53)" onmouseover="showTip(event, 'fs25', 53)" class="id">appendBy</span> <span class="pn">(</span><span class="k">fun</span> <span onmouseout="hideTip(event, 'fs26', 54)" onmouseover="showTip(event, 'fs26', 54)" class="id">mlc</span> <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs26', 55)" onmouseover="showTip(event, 'fs26', 55)" class="fn">mlc</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs27', 56)" onmouseover="showTip(event, 'fs27', 56)" class="id">Transforms</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs28', 57)" onmouseover="showTip(event, 'fs28', 57)" class="id">Concatenate</span><span class="pn">(</span><span onmouseout="hideTip(event, 'fs29', 58)" onmouseover="showTip(event, 'fs29', 58)" class="rt">DefaultColumnNames</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs30', 59)" onmouseover="showTip(event, 'fs30', 59)" class="id">Features</span> <span class="pn">,</span> <span class="s">&quot;SepalLength&quot;</span><span class="pn">,</span> <span class="s">&quot;SepalWidth&quot;</span><span class="pn">,</span> <span class="s">&quot;PetalLength&quot;</span><span class="pn">,</span> <span class="s">&quot;PetalWidth&quot;</span><span class="pn">)</span> <span class="pn">)</span>
+    <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs23', 52)" onmouseover="showTip(event, 'fs23', 52)" class="m">EstimatorModel</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs25', 53)" onmouseover="showTip(event, 'fs25', 53)" class="id">appendBy</span> <span class="pn">(</span><span class="k">fun</span> <span onmouseout="hideTip(event, 'fs26', 54)" onmouseover="showTip(event, 'fs26', 54)" class="id">mlc</span> <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs26', 55)" onmouseover="showTip(event, 'fs26', 55)" class="fn">mlc</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs27', 56)" onmouseover="showTip(event, 'fs27', 56)" class="id">Transforms</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs28', 57)" onmouseover="showTip(event, 'fs28', 57)" class="id">Concatenate</span><span class="pn">(</span>
+                                                                        <span onmouseout="hideTip(event, 'fs29', 58)" onmouseover="showTip(event, 'fs29', 58)" class="rt">DefaultColumnNames</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs30', 59)" onmouseover="showTip(event, 'fs30', 59)" class="id">Features</span> <span class="pn">,</span> 
+                                                                        <span class="s">&quot;SepalLength&quot;</span><span class="pn">,</span> 
+                                                                        <span class="s">&quot;SepalWidth&quot;</span><span class="pn">,</span> 
+                                                                        <span class="s">&quot;PetalLength&quot;</span><span class="pn">,</span> 
+                                                                        <span class="s">&quot;PetalWidth&quot;</span>
+                                                                      <span class="pn">)</span> <span class="pn">)</span>
     <span class="c">// Create the model</span>
-    <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs23', 60)" onmouseover="showTip(event, 'fs23', 60)" class="m">EstimatorModel</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs25', 61)" onmouseover="showTip(event, 'fs25', 61)" class="id">appendBy</span> <span class="pn">(</span><span class="k">fun</span> <span onmouseout="hideTip(event, 'fs26', 62)" onmouseover="showTip(event, 'fs26', 62)" class="id">mlc</span> <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs26', 63)" onmouseover="showTip(event, 'fs26', 63)" class="fn">mlc</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs20', 64)" onmouseover="showTip(event, 'fs20', 64)" class="id">Clustering</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs31', 65)" onmouseover="showTip(event, 'fs31', 65)" class="id">Trainers</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs32', 66)" onmouseover="showTip(event, 'fs32', 66)" class="id">KMeans</span><span class="pn">(</span><span class="id">featureColumn</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs29', 67)" onmouseover="showTip(event, 'fs29', 67)" class="rt">DefaultColumnNames</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs30', 68)" onmouseover="showTip(event, 'fs30', 68)" class="id">Features</span><span class="pn">,</span> <span class="id">clustersCount</span> <span class="o">=</span> <span class="n">3</span><span class="pn">)</span> <span class="pn">)</span>
+    <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs23', 60)" onmouseover="showTip(event, 'fs23', 60)" class="m">EstimatorModel</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs25', 61)" onmouseover="showTip(event, 'fs25', 61)" class="id">appendBy</span> <span class="pn">(</span><span class="k">fun</span> <span onmouseout="hideTip(event, 'fs26', 62)" onmouseover="showTip(event, 'fs26', 62)" class="id">mlc</span> <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs26', 63)" onmouseover="showTip(event, 'fs26', 63)" class="fn">mlc</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs20', 64)" onmouseover="showTip(event, 'fs20', 64)" class="id">Clustering</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs31', 65)" onmouseover="showTip(event, 'fs31', 65)" class="id">Trainers</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs32', 66)" onmouseover="showTip(event, 'fs32', 66)" class="id">KMeans</span><span class="pn">(</span>
+                                                                            <span class="id">featureColumn</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs29', 67)" onmouseover="showTip(event, 'fs29', 67)" class="rt">DefaultColumnNames</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs30', 68)" onmouseover="showTip(event, 'fs30', 68)" class="id">Features</span><span class="pn">,</span> 
+                                                                            <span class="id">clustersCount</span> <span class="o">=</span> <span class="n">3</span>
+                                                                          <span class="pn">)</span> <span class="pn">)</span>
     <span class="c">// Train the model</span>
     <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs23', 69)" onmouseover="showTip(event, 'fs23', 69)" class="m">EstimatorModel</span><span class="pn">.</span><span onmouseout="hideTip(event, 'fs33', 70)" onmouseover="showTip(event, 'fs33', 70)" class="id">fit</span> <span onmouseout="hideTip(event, 'fs18', 71)" onmouseover="showTip(event, 'fs18', 71)" class="id">trainingDataView</span>
 </code></pre></td>
