Update generated documentation for version 0.0.1

--- a/Introduction.html
+++ b/Introduction.html
@@ -38,8 +38,7 @@
 <h1><a name="Sample-Spam-detection" class="anchor" href="#Sample-Spam-detection">Sample Spam detection</a></h1>
 <p>*</p>
 <h1><a name="Introduction" class="anchor" href="#Introduction">Introduction</a></h1>
-<p>FSharpML is a functional-friendly lightweight wrapper of the powerful ML.Net library. It is designed to enable users to explore ML.Net in a scriptable
-manner, while maintaining the functional style of F#.</p>
+<p>FSharpML is a functional-friendly lightweight wrapper of the powerful <a href="https://dotnet.microsoft.com/apps/machinelearning-ai/ml-dotnet">ML.Net</a> library. It is designed to enable users to explore ML.Net in a scriptable manner, while maintaining the functional style of F#.</p>
 <p>After installing the package via Nuget we can load the delivered reference script and start using ML.Net in conjunction with FSharpML.</p>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l"> 1: </span>
 <span class="l"> 2: </span>
@@ -68,8 +67,7 @@ manner, while maintaining the functional style of F#.</p>
 </tr>
 </table>
 <p>To get a feel how this library handles ML.Net operations we rebuild the <a href="https://github.com/dotnet/machinelearning-samples/tree/master/samples/fsharp/getting-started/BinaryClassification_SpamDetection">Spam Detection tutorial</a> given by ML.Net.
-We will start by instantiating a MLContext, the heart of the ML.Net API and intended to serve as a method catalog. We will
-now use it to set a scope on data stored in a text file. The method name might be misleading, but ML.Net readers are lazy and
+We will start by instantiating a MLContext, the heart of the ML.Net API and intended to serve as a method catalog. We will now use it to set a scope on data stored in a text file. The method name might be misleading, but ML.Net readers are lazy and
 the reading process will start when the data is processed <a href="https://github.com/dotnet/machinelearning/blob/master/docs/code/IDataViewTypeSystem.md#standard-column-types">(see).</a></p>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l"> 1: </span>
 <span class="l"> 2: </span>
@@ -614,6 +612,7 @@ with different thresholds and plot both</p>
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">FSharpML</li>
             <li><a href="/FSharpML/index.html">Home page</a></li>
+			<li><a href="/FSharpML/tutorial.html">Tuturial</a></li>
             <li class="divider"></li>
             <li><a href="http://nuget.org/packages/FSharpML">Get Library via NuGet</a></li>
             <li><a href="https://github.com/CSBiology/FSharpML">Source Code on GitHub</a></li>
