--- a/IrisClassification.html
+++ b/IrisClassification.html
@@ -413,6 +413,7 @@
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">FSharpML</li>
             <li><a href="/FSharpML/index.html">Home page</a></li>
+			<li><a href="/FSharpML/tutorial.html">Tuturial</a></li>
             <li class="divider"></li>
             <li><a href="http://nuget.org/packages/FSharpML">Get Library via NuGet</a></li>
             <li><a href="https://github.com/CSBiology/FSharpML">Source Code on GitHub</a></li>
